...
            item {
                SettingsSectionHeader(title = "WebAvanue Browser")
            }

            item {
                SettingsItem(
                    title = "Search Engine",
                    subtitle = "Google",
                    icon = Icons.Default.Search,
                    onClick = { /* TODO: Search engine picker */ }
                )
            }

...
